--- a/package.json
+++ b/package.json
@@ -3,12 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "moment": "^2.24.0",
     "react": "^16.13.1",
+    "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-feather": "^2.0.4",
+    "react-loader-spinner": "^3.1.14",
+    "react-loadingg": "^1.7.2",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-scripts": "3.4.1",
+    "react-shadow-scroll": "^1.0.0",
+    "react-spinners-css": "^1.1.7",
+    "recharts": "^1.8.5",
+    "sitb-react-icon": "^1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2"
   }
 }
